traefik/failover-config.yaml
# 1. Service pour la VM Locale (Cloud Privé)
apiVersion: v1
kind: Service
metadata:
  name: cloud-prive-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30080

---
# 2. Endpoints avec ton IP (41.62.124.107)
apiVersion: v1
kind: Endpoints
metadata:
  name: cloud-prive-service
  namespace: default
subsets:
  - addresses:
      - ip: 41.62.124.107
    ports:
      - port: 30080

---
# 4. L'IngressRoute Principal
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-principal
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fwasubscription.myvnc.com`)
      kind: Rule
      services:
        - name: pfe-failover
          kind: TraefikService
